--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -2,13 +2,10 @@
 @article{LeSageetal:2011,
 author = {LeSage, James P. and Kelley Pace, R. and Lam, Nina and Campanella, Richard and Liu, Xingjian},
 title = {New Orleans business recovery in the aftermath of Hurricane Katrina},
-journal = {Journal of the Royal Statistical Society: Series A (Statistics in Society)},
+journal = {Journal of the Royal Statistical Society A},
 volume = {174},
 number = {4},
 publisher = {Blackwell Publishing Ltd},
-issn = {1467-985X},
-url = {http://dx.doi.org/10.1111/j.1467-985X.2011.00712.x},
-doi = {10.1111/j.1467-985X.2011.00712.x},
 pages = {1007--1027},
 keywords = {Spatial auto-regressive model, Spatial spillovers},
 year = {2011},
@@ -70,7 +67,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   series={Studies in Operational Regional Science},
   url={http://books.google.es/books?id=3dPIXClv4YYC},
   year={1988},
-  publisher={Springer}
+  publisher={Springer-Verlag}
 }
 
 @article{NelderWedderburn:1972,
@@ -118,7 +115,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   booktitle	= {{COMPLEX DATA MODELING AND COMPUTATIONALLY INTENSIVE
 		  STATISTICAL METHODS}},
   series	= {{Contributions to Statistics}},
-  publisher	= {Springer},
+  publisher	= {Springer-Verlag},
   year		= {{2010}},
   pages		= {{99-114}},
   abstract	= {{Latent Gaussian models are a common construct in
@@ -216,7 +213,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 		  STATISTICS}},
   year		= {{2011}},
   volume	= {{60}},
-  number	= {{Part 2}},
+  number	= {{2}},
   pages		= {{261-279}},
   abstract	= {{Spatiotemporal disease mapping models have been used
 		  extensively to describe the pattern of surveillance data.
@@ -285,10 +282,10 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   author	= {Rue, Havard and Martino, Sara and Chopin, Nicolas},
   title		= {{Approximate Bayesian inference for latent Gaussian models
 		  by using integrated nested Laplace approximations}},
-  journal	= {Journal of the Royal Statistical Society, Series B},
+  journal	= {Journal of the Royal Statistical Society B},
   year		= {{2009}},
   volume	= {{71}},
-  number	= {{Part 2}},
+  number	= {{2}},
   pages		= {{319-392}},
   abstract	= {{Structured additive regression models are perhaps the
 		  most commonly used class of models in statistical
@@ -367,12 +364,12 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   url		= {http://www.R-project.org/}
 }
 
-@Manual{	  rinla:2011,
+@Manual{	  rinla:2013,
   title		= {INLA: Functions which allow to perform a full Bayesian
 		  analysis of structured additive models using Integrated
 		  Nested Laplace Approximaxion},
-  author	= {Havard Rue and Sara Martino},
-  year		= {2009},
+  author	= {Havard Rue and Sara Martino and Finn Lindgren and Daniel Simpson and Andrea Riebler},
+  year		= {2013},
   note		= {R package version 0.0},
   url		= {http://www.r-inla.org}
 }
@@ -465,7 +462,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 		  {Van der Linde}, A.},
   title		= {Bayesian Measures of Model Complexity and Fit (with
 		  Discussion)},
-  journal	= {Journal of the Royal Statistical Society, Series B},
+  journal	= {Journal of the Royal Statistical Society B},
   year		= {2002},
   volume	= {64},
   number	= {4},
@@ -664,7 +661,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   author	= {P.J. Diggle and Paulo Justiniano Ribeiro},
   title		= {Model-based Geostatistics},
   year		= {2007},
-  publisher	= {Springer},
+  publisher	= {Springer-Verlag},
   address       = {New York}
 }
 
@@ -716,13 +713,13 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   booktitle =    {Statistical Modelling and Regression Structures --
                   Festschrift in Honour of Ludwig Fahrmeir},
   pages =        {91--110},
-  publisher =    {Springer Verlag},
+  publisher =    {Springer-Verlag},
   year =         2010,
   editor =       {T. Kneib and G. Tutz},
   address =      {Berlin}
 }
 
-@STRING{JRSSB = {Journal of the Royal Statistical Society, Series B}}
+@STRING{JRSSB = {Journal of the Royal Statistical Society B}}
 @Article{Lindgren:2011,
   author =       {F. Lindgren and H. Rue and J. Lindstr{\"o}m},
   title =        {An explicit link between {G}aussian fields and
@@ -735,11 +732,14 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   pages =        {423--498}
 }
 
-@article{Camelettietal:2011,
+@article{Camelettietal:2013,
    author ={Cameletti, M. and Lindgren, F. and Simpson, D. and Rue, H.},
    title={Spatio-temporal modeling of particulate matter concentration through the SPDE approach},
-   journal={Submitted},
-   year={2011}
+   journal={Advances in Statistical Analysis},
+   year={2013},
+   volume={97},
+   number={2},
+   pages={109--131}
 }
 
 
@@ -794,7 +794,7 @@ S\o{}rbye and H\r{a}vard Rue},
    title={Applied Spatial Data Analysis with {R}},
    author={Roger S. Bivand and Edzer J. Pebesma and Virgilio G\'omez-Rubio},
    year={2008},
-   publisher={Springer},
+   publisher={Springer-Verlag},
    address={New York}
 }
 
@@ -897,7 +897,7 @@ Editor = {{Mantovan, P and Secchi, P}},
 Title = {{Case studies in Bayesian computation using INLA}},
 Booktitle = {{COMPLEX DATA MODELING AND COMPUTATIONALLY INTENSIVE STATISTICAL METHODS}},
 Series = {{Contributions to Statistics}},
-publisher={Springer},
+publisher={Springer-Verlag},
 Year = {{2010}},
 Pages = {{99-114}},
 Abstract = {{Latent Gaussian models are a common construct in statistical
@@ -1044,7 +1044,7 @@ Title = {{Using integrated nested Laplace approximations for the evaluation of
 Journal = {{JOURNAL OF THE ROYAL STATISTICAL SOCIETY SERIES C-APPLIED STATISTICS}},
 Year = {{2011}},
 Volume = {{60}},
-Number = {{Part 2}},
+Number = {{2}},
 Pages = {{261-279}},
 Abstract = {{Spatiotemporal disease mapping models have been used extensively to
    describe the pattern of surveillance data. They are usually formulated
@@ -1791,7 +1791,7 @@ Title = {{Geostatistical inference under preferential sampling}},
 Journal = {{JOURNAL OF THE ROYAL STATISTICAL SOCIETY SERIES C-APPLIED STATISTICS}},
 Year = {{2010}},
 Volume = {{59}},
-Number = {{Part 2}},
+Number = {{2}},
 Pages = {{191-232}},
 Abstract = {{Geostatistics involves the fitting of spatially continuous models to
    spatially discrete data. Preferential sampling arises when the process
@@ -2150,11 +2150,39 @@ S\o{}rbye and H\r{a}vard Rue},
    author={Duncan Lee and Richard Mitchell},
    title={Locally adaptive spatial smoothing using conditional auto-regressive models},
    year={2013},
-   journal={Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+   journal={Journal of the Royal Statistical Society C},
    volume ={62},
    number ={5},
    pages={}
 }
 
+
+
+@misc{stan-software:2013,
+    author = {{Stan Development Team}},
+    year = 2013,
+    title = {Stan: A C++ Library for Probability
+             and Sampling, Version 1.3},
+    url = {http://mc-stan.org/}
+}
+
+@Manual{CARBayes:2013,
+    title = {CARBayes: Spatial areal unit modelling},
+    author = {Duncan Lee},
+    year = {2013},
+    note = {R package version 1.4},
+    url = {http://CRAN.R-project.org/package=CARBayes},
+  }
+
+@article{Blangiardoetal:2013,
+title = "Spatial and spatio-temporal models with R-INLA ",
+journal = "Spatial and Spatio-temporal Epidemiology ",
+volume = "4",
+number = "0",
+pages = "33 - 49",
+year = "2013",
+note = "",
+author = "Marta Blangiardo and Michela Cameletti and Gianluca Baio and Håvard Rue"
+}
 
 
