--- a/INLABMA/inst/not_a_vignette/spatial_inla.tex
+++ b/INLABMA/inst/not_a_vignette/spatial_inla.tex
@@ -485,12 +485,12 @@ and $\varepsilon_i$ is random Gaussian error term.
 > library("maptools")
 > data("boston")
 > library("INLA")
-> adj<- nb2mat(boston.soi, style="B")
-> boston.c$ID<-1:nrow(boston.c)
-> form<-log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) +  AGE + 
-+ log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)+
-+ f(ID, model="besag", graph=adj )
-> m1<-inla(form, data=boston.c)
+> adj <- nb2mat(boston.soi, style = "B")
+> boston.c$ID <- 1:nrow(boston.c)
+> form <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
++     AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT) + 
++     f(ID, model = "besag", graph = adj)
+> m1 <- inla(form, data = boston.c)
 \end{Sinput}
 \end{Schunk}
 
@@ -513,42 +513,41 @@ Call:
 
 Time used:
  Pre-processing    Running inla Post-processing           Total 
-          0.711           1.651           0.135           2.497 
+         0.4232          0.7319          0.0582          1.2133 
 
 Fixed effects:
-               mean     sd 0.025quant 0.5quant 0.975quant kld
-(Intercept)  3.5323 0.1595     3.2192   3.5325     3.8449   0
-CRIM        -0.0051 0.0009    -0.0069  -0.0051    -0.0033   0
-ZN           0.0004 0.0005    -0.0005   0.0004     0.0013   0
-INDUS       -0.0004 0.0025    -0.0052  -0.0004     0.0045   0
-CHAS1       -0.0285 0.0273    -0.0821  -0.0285     0.0251   0
-I(NOX^2)    -0.1136 0.1506    -0.4088  -0.1137     0.1822   0
-I(RM^2)      0.0108 0.0011     0.0087   0.0108     0.0128   0
-AGE         -0.0013 0.0005    -0.0022  -0.0013    -0.0004   0
-log(DIS)    -0.0938 0.0689    -0.2291  -0.0939     0.0415   0
-log(RAD)     0.0513 0.0200     0.0120   0.0513     0.0905   0
-TAX         -0.0004 0.0001    -0.0006  -0.0004    -0.0002   0
-PTRATIO     -0.0169 0.0051    -0.0269  -0.0169    -0.0070   0
-B            0.0007 0.0001     0.0005   0.0007     0.0009   0
-log(LSTAT)  -0.2295 0.0216    -0.2719  -0.2295    -0.1870   0
+                 mean       sd 0.025quant  0.5quant 0.975quant      kld
+(Intercept)  3.534954 1.60e-01   3.221396  3.535071   3.847909 0.00e+00
+CRIM        -0.005130 9.18e-04  -0.006932 -0.005130  -0.003330 0.00e+00
+ZN           0.000426 4.65e-04  -0.000486  0.000426   0.001339 0.00e+00
+INDUS       -0.000359 2.48e-03  -0.005234 -0.000359   0.004514 0.00e+00
+CHAS1       -0.028389 2.73e-02  -0.082031 -0.028388   0.025257 7.25e-17
+I(NOX^2)    -0.114759 1.51e-01  -0.409768 -0.114865   0.180924 1.15e-16
+I(RM^2)      0.010762 1.05e-03   0.008694  0.010762   0.012831 0.00e+00
+AGE         -0.001290 4.52e-04  -0.002176 -0.001290  -0.000404 0.00e+00
+log(DIS)    -0.094010 6.88e-02  -0.228925 -0.094034   0.041072 0.00e+00
+log(RAD)     0.051257 2.00e-02   0.012048  0.051257   0.090474 0.00e+00
+TAX         -0.000408 1.11e-04  -0.000625 -0.000408  -0.000191 1.08e-15
+PTRATIO     -0.016932 5.07e-03  -0.026878 -0.016933  -0.006982 5.27e-16
+B            0.000714 9.75e-05   0.000522  0.000714   0.000905 1.18e-30
+log(LSTAT)  -0.229971 2.17e-02  -0.272481 -0.229980  -0.187394 3.70e-32
 
 Random effects:
-Name	  Model
- ID   Besags ICAR model 
+Name	  Model	  	Max KLD 
+ID   Besags ICAR model 
 
 Model hyperparameters:
-                                        mean    sd      0.025quant 0.5quant
-Precision for the Gaussian observations 408.385 176.137 197.624    365.026 
-Precision for ID                         23.499   2.956  17.629     23.576 
+                                        mean   sd     0.025quant 0.5quant
+Precision for the Gaussian observations 379.02 163.48 182.84     338.81  
+Precision for ID                         23.96   3.25  17.60      24.02  
                                         0.975quant
-Precision for the Gaussian observations 863.394   
-Precision for ID                         29.115   
+Precision for the Gaussian observations 803.47    
+Precision for ID                         30.23    
 
-Expected number of effective parameters(std dev): 388.82(38.53)
-Number of equivalent replicates : 1.301 
+Expected number of effective parameters(std dev): 383.61(40.59)
+Number of equivalent replicates : 1.319 
 
-Marginal Likelihood:  -108.27 
-CPO and PIT are computed
+Marginal Likelihood:  -108.40 
 \end{Soutput}
 \end{Schunk}
 \noindent
@@ -1011,9 +1010,8 @@ Note that we will be using a binary adjacency matrix as the random
 effects have an intrinsic CAR specification:
 \begin{Schunk}
 \begin{Sinput}
-> #Binary adjacency matrix
-> boston.matB<-listw2mat(nb2listw(boston.soi, style="B"))
-> bmspB<-as(boston.matB, "CsparseMatrix")
+> boston.matB <- listw2mat(nb2listw(boston.soi, style = "B"))
+> bmspB <- as(boston.matB, "CsparseMatrix")
 \end{Sinput}
 \end{Schunk}
 
@@ -1025,29 +1023,23 @@ precission of the random effects in variable \code{fhyper}.
 
 \begin{Schunk}
 \begin{Sinput}
-> #Run models
-> rlambda<-seq(0.8, .99, length.out=15)
-> #Setting of hyper-parameters
-> fhyper=list(prec=list(prior="loggamma", param=c(1,1), initial=log(1), fixed=FALSE))
-> #Formula
-> form2<-log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
+> rlambda <- seq(0.8, 0.99, length.out = 15)
+> fhyper = list(prec = list(prior = "loggamma", param = c(1, 1), 
++     initial = log(1), fixed = FALSE))
+> form2 <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
 +     AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> lerouxmodels = mclapply(rlambda,
-+         function(lambda) {
-+                 leroux.inla(form2, d=boston.c, W=boston.matB, lambda=lambda,
-+                         fhyper=fhyper, improve=TRUE,
-+                         family = "gaussian",
-+ #   control.family = list(hyper = zero.variance),
-+                         control.predictor=list(compute=TRUE),
-+                         control.compute=list(dic=TRUE, cpo=TRUE),
-+                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
-+                 )
-+         })
+> lerouxmodels = mclapply(rlambda, function(lambda) {
++     leroux.inla(form2, d = boston.c, W = boston.matB, lambda = lambda, 
++         fhyper = fhyper, improve = TRUE, family = "gaussian", 
++         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
++             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
++         verbose = FALSE)
++ })
 \end{Sinput}
 \end{Schunk}
 
@@ -1066,7 +1058,7 @@ values of $\rho$.
 
 \begin{Schunk}
 \begin{Sinput}
-> bmaleroux<-BMA2(lerouxmodels, rlambda, 0, impacts=FALSE)
+> bmaleroux <- BMA2(lerouxmodels, rlambda, 0, impacts = FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1082,20 +1074,14 @@ as follows:
 
 \begin{Schunk}
 \begin{Sinput}
-> #Run with CARBAYES
 > library("CARBayes")
-> 
-> #New model
-> #form2<-log(CMEDV) ~CRIM+ZN + INDUS + CHAS + I(NOX^2)+
-> #   I(RM^2) +  AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
-> 
 \end{Sinput}
 \end{Schunk}
 \begin{Schunk}
 \begin{Sinput}
 > attach(boston.c)
-> lcarbayes<- gaussian.lerouxCAR (form2, W=as.matrix(bmspB), burnin=500, 
-+    n.sample=2500, thin=5)
+> lcarbayes <- gaussian.lerouxCAR(form2, W = as.matrix(bmspB), 
++     burnin = 500, n.sample = 2500, thin = 5)
 > detach(boston.c)
 \end{Sinput}
 \end{Schunk}
@@ -1112,7 +1098,7 @@ effects and the error term. \pkg{CARBayes} uses uniform priors on the variances,
 whiles \pkg{R-INLA} assigns inverted Gamma distributions to the variances.
 
 % latex table generated in R 3.0.1 by xtable 1.7-1 package
-% Fri May 31 13:35:40 2013
+% Sat Jun  1 16:12:05 2013
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
@@ -1297,23 +1283,16 @@ A simple wrapper function can be defined as follows for the SEM model:
 
 \begin{Schunk}
 \begin{Sinput}
-> semwr.inla<-function(formula, d, W, rho,...)
-+ {
-+         IrhoW<-diag(nrow(W))-rho*W
-+         IrhoW2<-IrhoW%*%t(IrhoW)
-+ 
-+         environment(formula)<-environment()
-+ 
-+         formula<-update(formula,
-+           . ~ . + f(idx, model="generic0", Cmatrix =IrhoW2) )
-+ 
-+         res<-inla(formula, data=d, ...)
-+ 
-+   #Compute log-determinat to correct the marginal-loglikelihood
-+         res$logdet<-as.numeric(determinant(IrhoW2)$modulus)
-+         res$mlik<-res$mlik+res$logdet/2
-+ 
-+         return(res)
+> semwr.inla <- function(formula, d, W, rho, ...) {
++     IrhoW <- diag(nrow(W)) - rho * W
++     IrhoW2 <- IrhoW %*% t(IrhoW)
++     environment(formula) <- environment()
++     formula <- update(formula, . ~ . + f(idx, model = "generic0", 
++         Cmatrix = IrhoW2))
++     res <- inla(formula, data = d, ...)
++     res$logdet <- as.numeric(determinant(IrhoW2)$modulus)
++     res$mlik <- res$mlik + res$logdet/2
++     return(res)
 + }
 \end{Sinput}
 \end{Schunk}
@@ -1358,23 +1337,20 @@ standard MCMC methods.
 
 \begin{Schunk}
 \begin{Sinput}
-> fform<-log(CMEDV) ~CRIM+ZN + INDUS + CHAS + I(NOX^2)+
-+    I(RM^2) +  AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
-> rrho1<-seq(0.5, .9, len=20)
+> fform <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
++     AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
+> rrho1 <- seq(0.5, 0.9, len = 20)
 \end{Sinput}
 \end{Schunk}
 \begin{Schunk}
 \begin{Sinput}
-> semmodels = mclapply(rrho1,
-+         function(rho) {
-+                 sem.inla(fform, d=boston.c, W=boston.mat, rho=rho,
-+                         family = "gaussian", impacts=FALSE,
-+                         control.family = list(hyper = zero.variance),
-+                         control.predictor=list(compute=TRUE),
-+                         control.compute=list(dic=TRUE, cpo=TRUE),
-+                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
-+                 )
-+         })
+> semmodels = mclapply(rrho1, function(rho) {
++     sem.inla(fform, d = boston.c, W = boston.mat, rho = rho, 
++         family = "gaussian", impacts = FALSE, control.family = list(hyper = zero.variance), 
++         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
++             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
++         verbose = FALSE)
++ })
 \end{Sinput}
 \end{Schunk}
 
@@ -1387,7 +1363,7 @@ the density of the prior at the different values of $\rho$.
 
 \begin{Schunk}
 \begin{Sinput}
-> bmasem<-BMA2(semmodels, rrho1, 1 , impacts=FALSE)
+> bmasem <- BMA2(semmodels, rrho1, 1, impacts = FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1402,30 +1378,26 @@ computations.
 
 \begin{Schunk}
 \begin{Sinput}
-> mmatrix<-model.matrix(fform, boston.c)
-> rrho2<-seq(0.3, .6, len=20)
+> mmatrix <- model.matrix(fform, boston.c)
+> rrho2 <- seq(0.3, 0.6, len = 20)
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> slmmodels = mclapply(rrho2,
-+         function(rho) {
-+                 slm.inla(form, d=boston.c, W=boston.mat, rho=rho, mmatrix=mmatrix,
-+                         family = "gaussian", impacts=TRUE,
-+                         control.data = list(hyper = zero.variance),
-+                         control.predictor=list(compute=TRUE),
-+                         control.compute=list(dic=TRUE, cpo=TRUE),
-+                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
-+                 )
-+         })
-> 
+> slmmodels = mclapply(rrho2, function(rho) {
++     slm.inla(form, d = boston.c, W = boston.mat, rho = rho, mmatrix = mmatrix, 
++         family = "gaussian", impacts = TRUE, control.data = list(hyper = zero.variance), 
++         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
++             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
++         verbose = FALSE)
++ })
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> bmaslm<-BMA2(slmmodels, rrho2, 1 , impacts=FALSE)
+> bmaslm <- BMA2(slmmodels, rrho2, 1, impacts = FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1436,30 +1408,27 @@ regarless of the value of $\rho$. This can be later passed to wrapper function
 
 \begin{Schunk}
 \begin{Sinput}
-> mmW<-bmsp%*%mmatrix[,-1]#Remove intercept
-> mmatrixsdm<-cbind(mmatrix, as.matrix(mmW))
-> rrho3<-seq(0.4, .7, len=20)
+> mmW <- bmsp %*% mmatrix[, -1]
+> mmatrixsdm <- cbind(mmatrix, as.matrix(mmW))
+> rrho3 <- seq(0.4, 0.7, len = 20)
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> sdmmodels = mclapply(rrho3,
-+         function(rho) {
-+                 sdm.inla(form, d=boston.c, W=boston.mat, rho=rho, mmatrix=mmatrixsdm,
-+                         family = "gaussian", impacts=TRUE,
-+                         control.data = list(hyper = zero.variance),
-+                         control.predictor=list(compute=TRUE),
-+                         control.compute=list(dic=TRUE, cpo=TRUE),
-+                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
-+                 )
-+         })
+> sdmmodels = mclapply(rrho3, function(rho) {
++     sdm.inla(form, d = boston.c, W = boston.mat, rho = rho, mmatrix = mmatrixsdm, 
++         family = "gaussian", impacts = TRUE, control.data = list(hyper = zero.variance), 
++         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
++             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
++         verbose = FALSE)
++ })
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> bmasdm<-BMA2(sdmmodels, rrho3, 1 , impacts=FALSE)
+> bmasdm <- BMA2(sdmmodels, rrho3, 1, impacts = FALSE)
 \end{Sinput}
 \end{Schunk}
 
